<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.teb.kilimanjaro.views.MyActionBar
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_height"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/radio_white_bg"
        android:orientation="vertical">

        <!--第一行：今日参与期数      胜率-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/revenue_linearlayout_height">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="10dp">

                <TextView
                    style="@style/StyleRevenueTextView"
                    android:text="@string/revenue_today_str"/>

                <TextView
                    android:id="@+id/tv_issue_count"
                    style="@style/StyleRevenueTextView"
                    android:text="0"
                    android:textColor="@color/red_text"
                    android:textSize="14sp"/>

                <TextView
                    style="@style/StyleRevenueTextView"
                    android:text="@string/betting_qi"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <TextView
                    style="@style/StyleRevenueTextView"
                    android:text="@string/revenue_win_lv"/>

                <TextView
                    android:id="@+id/tv_win"
                    style="@style/StyleRevenueTextView"
                    android:text="0%"
                    android:textColor="@color/red_text"/>
            </LinearLayout>
        </LinearLayout>

        <View style="@style/StyleHorizontalLineView"/>

        <!--第二行：今日亏盈    昨日亏盈-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/revenue_linearlayout_height">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="10dp">

                <TextView
                    style="@style/StyleRevenueTextView"
                    android:text="@string/revenue_today"/>

                <TextView
                    android:id="@+id/tv_today"
                    style="@style/StyleRevenueTextView"
                    android:text="0.0000000"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <TextView
                    style="@style/StyleRevenueTextView"
                    android:text="@string/revenue_yesterday"/>

                <TextView
                    android:id="@+id/tv_yesterday"
                    style="@style/StyleRevenueTextView"
                    android:text="-0.00000000"
                    android:textColor="@color/green"/>
            </LinearLayout>
        </LinearLayout>

        <View style="@style/StyleHorizontalLineView"/>

        <!--第三行：本周亏盈    上周亏盈-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/revenue_linearlayout_height">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="10dp">

                <TextView
                    style="@style/StyleRevenueTextView"
                    android:text="@string/revenue_this_week"/>

                <TextView
                    android:id="@+id/tv_this_week"
                    style="@style/StyleRevenueTextView"
                    android:text="0.0000000"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <TextView
                    style="@style/StyleRevenueTextView"
                    android:text="@string/revenue_last_week"/>

                <TextView
                    android:id="@+id/tv_last_week"
                    style="@style/StyleRevenueTextView"
                    android:text="-0.00000000"
                    android:textColor="@color/red_text"/>
            </LinearLayout>
        </LinearLayout>

        <View style="@style/StyleHorizontalLineView"/>

        <!--第二行：本月亏盈    上月亏盈-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/revenue_linearlayout_height">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="10dp">

                <TextView
                    style="@style/StyleRevenueTextView"
                    android:text="@string/revenue_this_month"/>

                <TextView
                    android:id="@+id/tv_this_month"
                    style="@style/StyleRevenueTextView"
                    android:text="0.0000000"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <TextView
                    style="@style/StyleRevenueTextView"
                    android:text="@string/revenue_last_month"/>

                <TextView
                    android:id="@+id/tv_last_month"
                    style="@style/StyleRevenueTextView"
                    android:text="-0.00000000"
                    android:textColor="@color/red_text"/>
            </LinearLayout>
        </LinearLayout>

        <View style="@style/StyleHorizontalLineView"/>

        <!--第二行：今年亏盈    去年亏盈-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/revenue_linearlayout_height">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="10dp">

                <TextView
                    style="@style/StyleRevenueTextView"
                    android:text="@string/revenue_this_year"/>

                <TextView
                    android:id="@+id/tv_this_year"
                    style="@style/StyleRevenueTextView"
                    android:text="0.0000000"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <TextView
                    style="@style/StyleRevenueTextView"
                    android:text="@string/revenue_last_year"/>

                <TextView
                    android:id="@+id/tv_last_year"
                    style="@style/StyleRevenueTextView"
                    android:text="-0.00000000"
                    android:textColor="@color/red_text"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <!--  ****************列表按钮-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/radio_red_white_bg">

        <TextView
            android:id="@+id/tv_by_id"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/radio_red_left_bg"
            android:gravity="center"
            android:text="@string/revenue_byperoid"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tv_by_day"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:gravity="center"
            android:text="@string/revenue_bydays"
            android:textColor="@color/main_background"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/radio_white_bg">
        <!--按期亏盈-->
        <LinearLayout
            android:id="@+id/ll_by_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/revenue_issue"
                    android:textColor="@color/gray_xx"/>

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/revenue_result"
                    android:textColor="@color/gray_xx"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:text="@string/lottery_d_amount"
                    android:textColor="@color/gray_xx"/>

                <TextView
                    android:id="@+id/tv_getgamecoin"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:gravity="center"
                    android:text="@string/lottery_d_get"
                    android:textColor="@color/gray_xx"/>
            </LinearLayout>

            <View style="@style/StyleHorizontalLineView"/>

            <com.handmark.pulltorefresh.library.PullToRefreshListView
                android:id="@+id/lv_by_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:divider="@null"
                android:paddingBottom="4dp"/>
        </LinearLayout>

        <!--按日亏盈-->
        <LinearLayout
            android:id="@+id/ll_by_day"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/revenue_date"
                    android:textColor="@color/gray_xx"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/revenue"
                    android:textColor="@color/gray_xx"/>
            </LinearLayout>

            <View style="@style/StyleHorizontalLineView"/>

            <ListView
                android:id="@+id/lv_by_day"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:divider="@null"
                android:paddingBottom="4dp"/>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>
