<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_line"
    android:orientation="vertical">

    <com.teb.kilimanjaro.views.MyActionBar
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_height"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/withdraw_cardno"
            android:textColor="@color/gray_xx"/>

        <TextView
            android:id="@+id/tv_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="null"
            android:textColor="@color/gray_xx"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center_vertical|right"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/withdraw_card_hint"
            android:textColor="@color/gray_xx"/>

        <TextView
            android:id="@+id/tv_call_kefu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/withdraw_call_kefu"
            android:textColor="@color/red_text"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:text="@string/withdraw_amount"
        android:textColor="@color/black_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/radio_gray_white_bg"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:text="￥"
            android:textColor="@color/black_text"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/et_with_amount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="4dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:inputType="number"
            android:maxLength="8"
            android:text=""
            android:textColor="@color/black_text"
            android:textSize="20sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/tv_can_with_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="可提现金额：null元"
            android:textColor="@color/gray_xx"/>

        <TextView
            android:id="@+id/tv_with_all"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical|right"
            android:text="@string/withdraw_all"
            android:textColor="@color/blue"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <EditText
            android:id="@+id/et_captcha"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_toLeftOf="@+id/tv_get_captcha"
            android:background="@drawable/radio_gray_white_bg"
            android:gravity="center"
            android:hint="@string/withdraw_mobie_captcha"
            android:inputType="number"
            android:maxLength="6"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/tv_get_captcha"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/btn_login_selector_bg"
            android:gravity="center"
            android:text="@string/get_captcha"
            android:textColor="@color/white"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_show_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:paddingLeft="16dp"
        android:text="* 将发送验证码短信到 null 手机上"
        android:textColor="@color/gray_xx"
        android:textSize="12sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_card"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:paddingLeft="10dp">

            <View
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:background="@drawable/circle_red_bg"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/withdraw_hint_str"
                android:textColor="@color/red_text"
                android:textStyle="bold"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="4dp"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:paddingTop="6dp"
            android:text="@string/withdraw_fee_desc"
            android:textColor="@color/red_text"
            android:textSize="12sp"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_submit_with"
            style="@style/LoginBtnStyle"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_green_selector_bg5"
            android:text="@string/withdraw_submit_with"/>
    </RelativeLayout>

</LinearLayout>
